[project]
name = "claudetmux"
version = "0.1.0"
description = "CLI for Claude to interact with tmux sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libtmux>=0.37.0",
    "click>=8.1.0",
]

[project.scripts]
ctmux = "claudetmux.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudetmux"]
